# ME_700_Assignment_1

./: .coverage  README.md  coverage.xml  pyproject.toml  test.py
.github/workflows/: test.yml
elasto_plastic_models/: __init__.py  isotropic_hardening.py  kinematic_hardening.py
examples/: bisection_examples.py  elasto_model_examples.py  newton_examples.py
root_finding_methods/: __init__.py
root_finding_methods.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
root_finding_methods/bisection_method/: __init__.py  bisection_solver.py
root_finding_methods/newton_method/: __init__.py  newton_solver.py
tests/: test_bisection_method.py  test_isotropic_hardening.py  test_kinematic_hardening.py  test_newton_method.py
