[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "root_finding_methods"
version = "0.1.0"
description = "A package for root-finding methods including Newton's method and Bisection method"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.18.0",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["root_finding_methods*", "elasto_plastic_models*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]